Fix the 'jump' links

--- a/app/styles/components/path.less
+++ b/app/styles/components/path.less
@@ -9,7 +9,7 @@ ul.paths {
   padding: 0;
 }
 
-li.path, ul.parameters li {
+li.path{
   list-style-type: none;
   padding-bottom: 1.2em;
   margin-left: 14px;
